crates/atlas-runtime/tests/snapshots/assignment_target_tests__compound_mod_assign.snap
---
source: crates/atlas-runtime/tests/assignment_target_tests.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
    op: ModAssign
    value:
      Literal:
        - Number: 10
        - start: 5
          end: 7
    span:
      start: 0
      end: 8
