crates/atlas-runtime/tests/snapshots/assignment_target_tests__compound_sub_assign.snap
---
source: crates/atlas-runtime/tests/assignment_target_tests.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
    op: SubAssign
    value:
      Literal:
        - Number: 3
        - start: 5
          end: 6
    span:
      start: 0
      end: 7
