crates/atlas-runtime/tests/snapshots/assignment_target_tests__multiple_assignments.snap
---
source: crates/atlas-runtime/tests/assignment_target_tests.rs
expression: program
---
items:
  - Statement:
      Assign:
        target:
          Name:
            name: x
            span:
              start: 0
              end: 1
        value:
          Literal:
            - Number: 1
            - start: 4
              end: 5
        span:
          start: 0
          end: 6
  - Statement:
      Assign:
        target:
          Name:
            name: y
            span:
              start: 7
              end: 8
        value:
          Literal:
            - Number: 2
            - start: 11
              end: 12
        span:
          start: 7
          end: 13
  - Statement:
      Assign:
        target:
          Name:
            name: z
            span:
              start: 14
              end: 15
        value:
          Literal:
            - Number: 3
            - start: 18
              end: 19
        span:
          start: 14
          end: 20
